# doctor-doc

./: README.md  doctordoc.py  pyproject.toml
doctordoc/: __init__.py  config.py  model.py  prompt_engineering.py  pyproject.toml
doctordoc/doctordoc/: __init__.py  config.py  test.py  test2.py
streamlit/: doctordoc.py  doctordoc2.py
webapp/: doctordoc1.py  main.py
