[tool.poetry]
name = "doctor-doc"
version = "0.1.0"
description = ""
authors = [
    "Hannah Smith <hasmith@redhat.com>",
    "Grace Chin <gchin@redhat.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python =">=3.9,<3.9.7 || >3.9.7,<4.0"
requests = "^2.31.0"
streamlit = "^1.31.1"
langchain = "^0.1.7"
doctordoc = {path = "doctordoc"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
doctor-doc = "doctor-doc.doctor-doc:doctor-doc"